--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
 			<meta http-equiv="content-Type" content="text/html"; charset="utf-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 			<link rel="stylesheet" type="text/css" href="style.css"/>
+			<link rel="shortcut icon" href="images/icone.png"/>
 			<link rel="stylesheet" type="text/css" href="style_responsive.css" media="screen and (max-width: 700px)"/>
 		</head>
 		<body>
@@ -17,7 +18,7 @@
 						<div class="tanone_e_patale_header_logo">
 							<!--<h1>Tanoné E.Patalé</h1>
 							<h2>100% digital</h2>-->
-							<img src="images/logo11.png"/>
+							<img src="images/logoo.png"/>
 						</div>
 						<nav>
 							<ul id="menu">
@@ -30,10 +31,10 @@
 								<li><a href="blog.html" id="page_active">BLOG</a></li>
 								<li><a href="contact.html">CONTACT</a></li>
 								<div class="reseaux_sociaux" id="reseaux_sociaux">
-									<img src="images/facebook.png"/>
-									<img src="images/twitter.png"/>
-									<img src="images/watsap.png"/>
-									<img src="images/linkedin.png"/>
+									<a href="http://www.facebook.com/edmondtanone"><img src="images/facebook.png"/></a>
+									<a href="http://www.twitter.com/tenoneedmond"><img src="images/twitter.png"/></a>
+									<a href="http://www.whatsapp.com/tanoneedmond"><img src="images/watsap.png"/></a>
+									<a href="http://www.linkedin.com/tanoneedmond"><img src="images/linkedin.png"/></a>
 								</div>
 							</ul>
 							<div class="navbar_header" id="navbar_header">
@@ -56,23 +57,24 @@
 							<h1 class="titre_article">Pourquoi un site internet pour une jeune entreprise?</h1>
 							<h2>Voiçi 5 raisons d'avoir un site internet au lancement d'une start-up:</h2>
 							<p>
-								En tant que dirigeant d'une start-up  ou porteur de projet, vous 
-								vous demandez peut etre à quoi peut bien servir un site internet.
-								Surtout quant vous peinez à lancer votre start-up et que vous faites
-								face à des nombreux difficultés financière. D'un autre coté, vous vous
-								dites qu'il y a les réseaux sociaux et notament facebook, wattsap qui 
-								peuvent servir de plate forme publicitaire. Et bien vous avez sans 
-								doute raison, on peut bien se servir des réseaux sociaux pour faire
-								la promotion de son produit ou service, d'au tant plus qu'on peine 
-								déja à lancer ce produit ou service. Engager un développeur serait
-								une charge financière de plus que ne pourait se permetre la toute jeune 
-								start-up.<br/>Ce pendant, un site internet bien conçu savère etre un outil 
-								très puissant de communication et de vente pour les services de e-commerce.
-								Voiçi cinq raisons fondamentales d'avoir un site internet pour une jeune start-up.
+								En tant que dirigent d’une start-up ou porteur de projet, vous vous demandez peut-être à quoi peut bien servir un site internet. Surtout quand vous peinez à lancer votre entreprise et que vous faites face à des nombreuses difficultés financières. D’un autre côté, vous avez les réseaux sociaux, notamment facebook qui peuvent servir de plateforme publicitaire. Et bien vous avez raison, on peut très bien se servir des réseaux sociaux pour faire la promotion de son produit ou service, c’est facile, simple et rapide. Cependant, une publicité facebook ou encore l’utilisation des réseaux sociaux ne vous garantissent pas des résultats à long terme. Pour vous maintenir dans la durée et avoir des résultats à long terme, il faut un site web dès le lancement de vos activités.<br/><br/> 
+Voilà pour l’occasion cinq raisons fondamentale d’avoir un site internet au tout début de votre start-up :<br/><br/>
+<mark>Le professionnalisme :</mark> un site internet vous donne plus de crédibilité, un accès à un service de messagerie professionnelle vous permettant de tenir informer vos clients et partenaire sur vos différentes activités.<br/><br/>
+<mark>Réduction des couts de communication :</mark> avec votre site internet, pas besoin de payer pour vos publicités, ce qui n’est pas le cas sur facebook ou Instagram si vous voulez que votre contenu soit viral.<br/><br/>
+<mark>Fidélisation des clients :</mark> vous pouvez être sûr que les personnes qui se connectent à votre site s’intéressent vraiment à votre activité, par contre sur les réseaux sociaux tout le peut voir vos contenus mais très peu y portent une attention particulière.<br/><br/>
+<mark>L’automatisation :</mark> pour ceux qui font dans le e-commerce, un site e-commerce permet d’automatiser les ventes. Votre boutique tourne à tout moment sans une nécessaire intervention de votre part.<br/><br/>
+<mark>Générer des contacts :</mark> un site internet vous permet de présenter clairement votre organisation ou entreprise aux potentiels partenaires à travers le monde entier et de créer des contacts.<br/>
+
+
 							</p>
 							<p id="auteur">
 								Publié le: 29/04/2021<br/>
 								Par Tanoné E.Patalé
+								<div class="reseaux_sociaux_article">
+									<img src="images/facebook2.png"/>
+									<img src="images/twitter2.png"/>
+									<img src="images/linkedin2.png"/>
+								</div>
 							</p>
 						</div>
 					</section>
@@ -119,10 +121,13 @@
 						</div>
 						<div class="reseaux_sociaux_footer">
 							<h1>ME SUIVRE</h1>
-							<p>Facebook<br/>LinkedIn<br/>Twitter<br/>WhatsApp</p>
+							<div class="reseaux_sociaux_footer_img">
+								<a href="http://www.facebook.com/edmondtanone"><img src="images/facebook3.png"/></a>
+								<a href="http://www.linkedin.com/tanoneedmond"><img src="images/linkedin3.png"/></a>
+							</div>
 						</div>
 					</div>
-					<p class="copyright">Création de site internet <mark>@ 2021 by Tanoné E.Patalé</mark> Mensions Légales</p>
+					<p class="copyright">Tanoné E. Patalé @2021</p>
 				</footer>
 				<script>
 					var menu = document.getElementById("menu");
