--- a/blog3.html
+++ b/blog3.html
@@ -28,8 +28,8 @@
 								</div>
 								<li><a href="index.html">ACCEUIL</a></li>
 								<li><a href="apropos.html">QUI_SUIS-JE ?</a></li>
-								<li><a href="blog.html">BLOG</a></li>
-								<li><a href="contact.html" id="page_active">CONTACT</a></li>
+								<li><a href="blog.html" id="page_active">BLOG</a></li>
+								<li><a href="contact.html">CONTACT</a></li>
 								<div class="reseaux_sociaux" id="reseaux_sociaux">
 									<a href="http://www.facebook.com/edmondtanone"><img src="images/facebook.png"/></a>
 									<a href="http://www.twitter.com/tenoneedmond"><img src="images/twitter.png"/></a>
@@ -46,45 +46,56 @@
 							</div>
 						</nav>
 					</header>
-					<div class="banner_menu">HOME > CONTACT</div>
-				</div>
-				<div class="tanone_e_patale_contact_formilaire">
-					<p class="contact">Vous souhaitez me confier votre projet, ou tout simplement
-					me poser une quetion? N'esitez pas , remplssez le formulaire ci-dessous pour que nous puissons en discuter.
-					</p>
-					<form action="traitement_formulaire.html" method="post">
-						<div class="formulaire_de_contact">
-							<div class="formulaire_de_contact1">
-								<p>
-									<label>Votre Nom</label><br>
-									<input type="text" name="nom" id="nom" class="nom"/>
-								</p><br/>
-								<p>
-									<label>Votre E-mail</label><br>
-									<input type="email" name="e-mail" id="e-mail" class="e-mail"/>
-								</p><br/>
-								<p>
-									<label>votre Telephone<mark> (Whatsapp)</mark></label><br>
-									<input type="tel" name="telephone" id="telephone" class="telephone"/>
-								</p>
-							</div>
-							<div class="formulaire_de_contact2">
-								<p>
-									Objet :
-									<input type="radio" name="objet" value="service" id="service" checked="checked"/>
-									<label>Service</label>
-									<input type="radio" name="objet" value="quetion" id="quetion"/>
-									<label>Question</label>
-								</p>
-								<p>
-									<label>Votre message</label><br>
-									<textarea id="votre_message" class="votre_message" name="votre_message"></textarea><br/>
-									<button  id="boutonEnvoie" class="boutonEnvoie" type="submit">Envoyer</button>
-								</p>
-							</div>
+					<div class="banner_menu">HOME > BLOG</div>
+				</div><br/><br/><br/>
+				<div class="tanone_e_patale_blog">
+					<section class="article1">
+						<div class="article1_img">
+							<img src="images/startup2.jpg" alt="Image entreprise">
 						</div>
-					</form>
+						<div class="article1_text">
+							<h1 class="titre_article">C'est quoi un incubateur?</h1>
+							<h2></h2>
+							<p>
+								
+							</p>
+							<p id="auteur">
+								Publié le: 00/00/0000<br/>
+								Par Tanoné E.Patalé
+								<div class="reseaux_sociaux_article">
+									<img src="images/facebook2.png"/>
+									<img src="images/twitter2.png"/>
+									<img src="images/linkedin2.png"/>
+								</div>
+							</p>
+						</div>
+					</section>
 				</div>
+				<section>
+					<div class="section2">
+						<h2>A lire aussi :</h2>
+						<div class="autres_articles">
+							<article>
+								<a href="blog.html">
+									<img src="images/startup.jpg" alt=""/>
+									<h2>Pourquoi un site internet pour une jeune entreprise?</h2>
+								</a>
+							</article>
+							<article>
+								<a href="blog1.html">
+									<img src="images/startup1.jpg" alt=""/>
+									<h2>C'est quoi une start-up?</h2>
+								</a>
+							</article>
+							<article>
+								<a href="blog2.html">
+									<img src="images/ggg.jpg" alt=""/>
+									<h2>L'entrepreneuriat numérique au Tchad.</h2>
+								</a>
+							</article>
+						</div>
+					</div>
+				</section>
 				<footer>
 					<div class="footer">
 						<div class="menu_footer">
