--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 			<meta http-equiv="content-Type" content="text/html"; charset="utf-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 			<link rel="stylesheet" type="text/css" href="style.css"/>
-			<link rel="stylesheet" type="text/css" href="style_responsive.css" media="screen and (max-width: 700px)"/>
+			<link rel="shortcut icon" href="images/icone.png"/>
+			<link rel="stylesheet" type="text/css" href="style_responsive.css" media="screen and (max-width: 700px)"/> 
 		</head>
 		<body>
 			<div class="tanone_e_patale_body_of_page">
@@ -17,7 +18,7 @@
 						<div class="tanone_e_patale_header_logo">
 							<!--<h1>Tanoné E.Patalé</h1>
 							<h2>100% digital</h2>-->
-							<img src="images/logo11.png"/>
+							<img src="images/logoo.png"/>
 						</div>
 						<nav>
 							<ul id="menu">
@@ -30,10 +31,10 @@
 								<li><a href="blog.html">BLOG</a></li>
 								<li><a href="contact.html">CONTACT</a></li>
 								<div class="reseaux_sociaux" id="reseaux_sociaux">
-									<img src="images/facebook.png"/>
-									<img src="images/twitter.png"/>
-									<img src="images/watsap.png"/>
-									<img src="images/linkedin.png"/>
+									<a href="http://www.facebook.com/edmondtanone"><img src="images/facebook.png"/></a>
+									<a href="http://www.twitter.com/tenoneedmond"><img src="images/twitter.png"/></a>
+									<a href="http://www.whatsapp.com/tanoneedmond"><img src="images/watsap.png"/></a>
+									<a href="http://www.linkedin.com/tanoneedmond"><img src="images/linkedin.png"/></a>
 								</div>
 							</ul>
 							<div class="navbar_header" id="navbar_header">
@@ -53,7 +54,7 @@
 						<div class="welcom_presentation_text">
 							<h1>Bienvenue!</h1>
 							<h2>Particuliers & entreprises</h2>
-							<p id="welcom_p1">Multipliez votre clientèle à l'infinie grace à la puissance du digital. Découvrez le web, l'outil indispensable en 2021 pour faire connaitre et rendre prospère votre business.</p>
+							<p id="welcom_p1">Multipliez votre clientèle à l'infinie grâce à la puissance du digital. Découvrez le web, l'outil indispensable en 2021 pour faire connaitre et rendre prospère votre business.</p>
 							<p id="welcom_p2"><mark>Tanoné E.Patalé</mark><br>Développeur web, webMaster & Community Manager freelance</p>
 						</div>
 					</div>
@@ -73,12 +74,12 @@
 						<div class="service_site_vitrine">
 							<img src="images/vitrine.png"/>
 							<h2>Site vitrine</h2>
-							<p>Mettez votre entreprise en avant grace à un site internet clair, efficace et percutant.</p>
+							<p>Mettez votre entreprise en avant grâce à un site internet clair, efficace et percutant.</p>
 						</div>
 						<div class="service_site_ecommerce">
 							<img src="images/ecommerce.png"/>
 							<h2>Site e-commerce</h2>
-							<p>Faites-vous une place sur le marché du commerce electronique et boostez votre chifre d'affaire.</p>
+							<p>Faites-vous une place sur le marché du commerce électronique et boostez votre chifre d'affaire.</p>
 						</div>
 						<div class="service_marketing_digital">
 							<img src="images/digital_marketing.png"/>
@@ -89,8 +90,8 @@
 					<p><a href="contact.html">Contactez-moi</a></p>
 				</div>
 				<div class="votre_image">
-					<h1>Une démarche profesionnelle</h1>
-					<p>Boustez votre activité avec un site internet fait sur mesure.</p>
+					<h1>Une démarche professionnelle</h1>
+					<p>Boostez votre activité avec un site internet fait sur mesure.</p>
 					<h1>Des résultats prouvés et garentis.</h1>
 				</div>
 				<div class="tanone_e_patale_body_aboutme">
@@ -98,19 +99,18 @@
 					<div class="tanone_e_patale_body_aboutme1">
 						<div class="tanone_e_patale_body_aboutme_photo">
 							<img src="images/edmond.jpg" class="aboutme_photo1" alt="ma photo"/>
-							<img src="images/moi.jpg" class="aboutme_photo2" alt="ma photo"/>
 						</div>
 						<div class="tanone_e_patale_body_aboutme_text">
 							<p class="tanone_e_patale_body_aboutme_text_biographie">Je suis<strong> Tanoné E.Patalé </strong>Développeur web, WebMaster & Community manager freelance. Merci de vous intéreser à se que je fais et peux vous apporter.
 							C'est un réel plaisir pour moi de vous accompagner en tant que particulier ou entreprise dans votre quète de visibilité et de présence sur internet.<br>
-							Passioné du code mais également de l'entrepreneuriat, je cotoie le milieu des start-up depuis quelques années déja et J'aide ses dernières à travers un site internet à: .......<br>
+							Passioné du code mais également de l'entrepreneuriat, je cotoie le milieu des start-up depuis quelques années déja et J'aide ses dernières à.......<br>
 							</p>
 							<p class="tanone_e_patale_body_aboutme_text_service"><a  href="apropos.html">En savoir plus sur moi !</a></p>
 						</div>
 					</div>
 				</div><hr id="hr" class="hr"/>
 				<div class="tanone_e_patale_body_distance_temps">
-					<h1>Accomplissez vos reves !</h1>
+					<h1>Accomplissez vos rêves !</h1>
 					<div class="tanone_e_patale_body_distance_tempsA">
 						<div class="tanone_e_patale_body_distance">
 							<img src="images/monde1.png" alt="globe_terestre" class="monde1" />
@@ -125,7 +125,7 @@
 							<p class="distanceP">Vous projetez étandre votre activité en ligne ? Alors ne perdez pas plus de temps à attendre le bon moment car le meilleur timing c'est maintenant.</p>
 						</div>
 					</div>
-					<p class="lien"><a href="blog.html">En savoir plus</a></p>
+					<p class="lien"><a href="contact.html">En savoir plus</a></p>
 				</div>
 				<div class="tanone_e_patale_blog">
 					<h1>Lire quelques articles</h1>
@@ -186,15 +186,17 @@
 						</div>
 						<div class="reseaux_sociaux_footer">
 							<h1>ME SUIVRE</h1>
-							<p>Facebook<br/>LinkedIn<br/>Twitter<br/>WhatsApp</p>
+							<div class="reseaux_sociaux_footer_img">
+								<a href="http://www.facebook.com/edmondtanone"><img src="images/facebook3.png"/></a>
+								<a href="http://www.linkedin.com/tanoneedmond"><img src="images/linkedin3.png"/></a>
+							</div>
 						</div>
 					</div>
-					<p class="copyright">Création de site internet <mark>@ 2021 by Tanoné E.Patalé</mark> Mensions Légales</p>
+					<p class="copyright">Tanoné E. Patalé @2021</p>
 				</footer>
 			</div>
 			<script>
 				var menu = document.getElementById("menu");
-				
 					navbar_header.addEventListener("click", function(){
 						document.getElementById("menu").style.left = 0;
 						var navbar_header = document.getElementById("navbar_header");
@@ -205,7 +207,6 @@
 						document.getElementById("menu").style.left = "-90%";
 						})
 					})
-					
 			</script>
 		</body>
 	</html>
