--- a/apropos.html
+++ b/apropos.html
@@ -5,6 +5,7 @@
 			<meta http-equiv="content-Type" content="text/html"; charset="utf-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 			<link rel="stylesheet" type="text/css" href="style.css"/>
+			<link rel="shortcut icon" href="images/icone.png"/>
 			<link rel="stylesheet" type="text/css" href="style_abaoutme.css"/>
 			<link rel="stylesheet" type="text/css" href="style_responsive.css" media="screen and (max-width: 700px)"/>
 		</head>
@@ -18,7 +19,7 @@
 						<div class="tanone_e_patale_header_logo">
 							<!--<h1>Tanoné E.Patalé</h1>
 							<h2>100% digital</h2>-->
-							<img src="images/logo11.png"/>
+							<img src="images/logoo.png"/>
 						</div>
 						<nav>
 							<ul id="menu">
@@ -31,10 +32,10 @@
 								<li><a href="blog.html">BLOG</a></li>
 								<li><a href="contact.html">CONTACT</a></li>
 								<div class="reseaux_sociaux" id="reseaux_sociaux">
-									<img src="images/facebook.png"/>
-									<img src="images/twitter.png"/>
-									<img src="images/watsap.png"/>
-									<img src="images/linkedin.png"/>
+									<a href="http://www.facebook.com/edmondtanone"><img src="images/facebook.png"/></a>
+									<a href="http://www.twitter.com/tenoneedmond"><img src="images/twitter.png"/></a>
+									<a href="http://www.whatsapp.com/tanoneedmond"><img src="images/watsap.png"/></a>
+									<a href="http://www.linkedin.com/tanoneedmond"><img src="images/linkedin.png"/></a>
 								</div>
 							</ul>
 							<div class="navbar_header" id="navbar_header">
@@ -47,34 +48,44 @@
 						</nav>
 					</header>
 					<div class="banner_menu">HOME > QUI SUIS-JE ?</div>
-				</div><br/><br/>
+				</div><br/>
 				<div class="tanone_e_patale_body_aboutme">
-					<div class="tanone_e_patale_body_aboutme1">
-						<div class="tanone_e_patale_body_aboutme_photo">
-							<img src="images/edmond.jpg" class="aboutme_photo1" alt="ma photo"/>
-							<img src="images/moi.jpg" class="aboutme_photo2" alt="ma photo"/>
+					<div class="tanone_e_patale_body_aboutme_photo">
+						<div class="tanone_e_patale_body_aboutme_photo_citation">
+							<p>" Celui qui n'abandonne pas a toujours une chance de réussir "</p>
 						</div>
+						<img src="images/edmond.jpg" class="aboutme_photo1" alt="ma photo"/>
+					</div>
+					<div class="tanone_e_patale_body_aboutme1">
 						<div class="tanone_e_patale_body_aboutme_text">
+							<h2>A mon propos</h2>
 							<p class="tanone_e_patale_body_aboutme_text_biographie">Je suis<strong> Tanoné E.Patalé </strong>Développeur web, WebMaster & Community manager freelance. Merci de vous intéreser à se que je fais et peux vous apporter.
-							C'est un réel plaisir pour moi de vous accompagner en tant que particulier ou entreprise dans votre quète de visibilité et de présence sur internet.<br>
+							C'est un réel plaisir pour moi de vous accompagner en tant que particulier ou entreprise dans votre quète de visibilité et de présence sur internet.<br><br/>
 							Passioné du code mais également de l'entrepreneuriat, mon but est de participer à l'autonomisation des jeunes et le développement de Afrique par le digital et surtout de diminuer le chomage en Afrique. 
-							Je cotoie le milieu des start-up depuis quelques années déja et J'aide ses dernières à travers un site internet à:<br>
-							</p>
-							<ol class="interet_site_web">
-								<li>Avoir plus de crédibilité</li>
-								<li>Obtenir un service de messagerie professionnelle</li>
-								<li>Générer des contacts</li>
-								<li>Réduire les couts de communication</li>
-								<li>Obtimiser votre service client</li>
-								<li>Et bien d'autres avantages</li>
-							</ol>
-							<p class="tanone_e_patale_body_aboutme_text_biographie">Pour etre efficace dans le fonctionnement de sa vie et dans tout ce que l'on entreprend, il faut savoir mobiliser des aptitudes techniques, des compétences relationnelles, une intelligence de situation et des compétences émotionnelles.<br/><br/>
-							De ce fait, j'offre des formations et j'accompagne les jeunes dans leur démarche entrepreneuriale. Adepte du travail bien fait, Je mets à votre service mon expertise en création de site internet ( conception, réalisation et maintenance ) et du marketing digital pour des meilleurs résultats au sein de votre organisation.</p>
+							Je cotoie le milieu des start-up depuis quelques années déja et j'aide ces derniers à se développer.<br><br/>
+							Pour être efficace dans le fonctionnement de sa vie et dans tout ce que l'on entreprend, il faut savoir mobiliser des aptitudes techniques, des compétences relationnelles, une intelligence de situation et des compétences émotionnelles.<br/><br/>
+							De ce fait, j'offre des formations et j'accompagne les jeunes dans leur démarche entrepreneuriale. Adepte du travail bien fait, Je mets à votre service mon expertise en création de site internet (conception, réalisation et maintenance) et du marketing digital pour des meilleurs résultats au sein de votre organisation.</p>
 						</div>
 					</div>
+					<h2>Mes citations favorites :</h2>
+						<p class="citations">
+							" La compréhension est le point de départ de la connaissance. "<br/>
+							<mark>Rev Dr Sun Myung Moon</mark><br/></br/>
+							" L’imagination est plus importante que le savoir. "<br/>
+							<mark>Albert Einstein</mark><br/></br/>
+							" La perfection est atteinte non pas quand il n’y a plus rien à ajouter mais quand il n’y a plus rien à retirer. "<br/>
+							<mark>Saint Exupéry</mark>
+						</p>
 				</div><br/><br/>
 				<div class="tanone_e_patale_apropos_competance">
-					<h2>Competances</h2>
+					<h1>Compétances et expertises</h1>
+					<h2>Marketing digital</h2>
+					<ul>
+						<li><img src="images/selection.png"/><p>Prospection digital</p></li>
+						<li><img src="images/selection.png"/><p>Publicité Facebook</p></li>
+						<li><img src="images/selection.png"/><p>E-mailing</p></li>
+					</ul>
+					<h2>Création de site web</h2>
 					<div class="competence_html_css">
 						<p id="html">HTML / CSS</p>
 						<div class="competence_html_cssA">
@@ -90,7 +101,7 @@
 					<div class="competence_html_css">
 						<p id="html">PHP / MySQL</p>
 						<div class="competence_html_cssA">
-							<p id="php">Certifié OpenClassrooms<a href="#">70%</a></p>
+							<p id="php">Certifié OC<a href="#">70%</a></p>
 						</div>
 					</div>
 					<div class="competence_html_css">
@@ -99,12 +110,18 @@
 							<p id="js">JS<a href="#">35%</a></p>
 						</div>
 					</div>
+					<div class="competence_html_css">
+						<p id="html">WordPress</p>
+						<div class="competence_html_cssA">
+							<p id="wordpress">Certifié OpenClassrooms<a href="#">90%</a></p>
+						</div>
+					</div>
 				</div>
 				<div class="tanone_e_patale_apropos_contact">
-					<p>Me contacter :</p>
+					<p>Vous être une <mark>PME ou un independant</mark>, vous souhaitez signer plus de contrats ou vendre plus et booster votre chiffre d'affaires, alors ce qu'il vous reste à faire c'est de me contacter.</p>
 					<div class="tanone_e_patale_apropos_contact1">
 						<div class="par_whattsap"><img src="images/whattsap.png"/><p>(+237)693843337</p></div>
-						<div class="par_email"><img src="images/email.png"/><p> contact@tanoneepatale.com</p></div>
+						<div class="par_email"><img src="images/email.png"/><p>contact@tanoneepatale.com</p></div>
 					</div>
 				</div>
 				<footer>
@@ -124,10 +141,13 @@
 						</div>
 						<div class="reseaux_sociaux_footer">
 							<h1>ME SUIVRE</h1>
-							<p>Facebook<br/>LinkedIn<br/>Twitter<br/>WhatsApp</p>
+							<div class="reseaux_sociaux_footer_img">
+								<a href="http://www.facebook.com/edmondtanone"><img src="images/facebook3.png"/></a>
+								<a href="http://www.linkedin.com/tanoneedmond"><img src="images/linkedin3.png"/></a>
+							</div>
 						</div>
 					</div>
-					<p class="copyright">Création de site internet <mark>@ 2021 by Tanoné E.Patalé</mark> Mensions Légales</p>
+					<p class="copyright">Tanoné E. Patalé @2021</p>
 				</footer>
 				<script>
 					var menu = document.getElementById("menu");
