--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<h1>Des résultats prouvés et garentis.</h1>
 				</div>
 				<div class="tanone_e_patale_body_aboutme">
-					<h1>Qui suie-je ?</h1>
+					<h1>Qui suis-je ?</h1>
 					<div class="tanone_e_patale_body_aboutme1">
 						<div class="tanone_e_patale_body_aboutme_photo">
 							<img src="images/edmond.jpg" class="aboutme_photo1" alt="ma photo"/>
@@ -175,7 +175,7 @@
 							<h1>DECOUVERTE</h1>
 							<ul>
 								<li><a href="index.html">Acceuil</a></li>
-								<li><a href="apropos.html">Qui suie-je ?</a></li>
+								<li><a href="apropos.html">Qui suis-je ?</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
