--- a/apropos.html
+++ b/apropos.html
@@ -130,7 +130,7 @@
 							<h1>DECOUVERTE</h1>
 							<ul>
 								<li><a href="index.html">Acceuil</a></li>
-								<li><a href="apropos.html">Qui suie-je ?</a></li>
+								<li><a href="apropos.html">Qui suis-je ?</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
