--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<img src="images/edmond.jpg" class="aboutme_photo1" alt="ma photo"/>
 						</div>
 						<div class="tanone_e_patale_body_aboutme_text">
-							<p class="tanone_e_patale_body_aboutme_text_biographie">Je suis<strong> Tanoné E.Patalé </strong>Développeur web, WebMaster & Community manager freelance. Merci de vous intéresser à se que je fais et peux vous apporter.
+							<p class="tanone_e_patale_body_aboutme_text_biographie">Je suis<strong> Tanoné E.Patalé </strong>Développeur web, WebMaster & Community manager freelance. Merci de vous intéresser à ce que je fais et peux vous apporter.
 							C'est un réel plaisir pour moi de vous accompagner en tant que particulier ou entreprise dans votre quète de visibilité et de présence sur internet.<br>
 							Passioné du code mais également de l'entrepreneuriat, je cotoie le milieu des start-up depuis quelques années déja et J'aide ses dernières à.......<br>
 							</p>
