--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="tanone_e_patale_body_of_page">
 				<div class="edmond">
 					<div class="contact_header">
-						<p>+237 693 84 33 37<br/>tanoneedmond@gmail.com<br/></p>
+						<p>+237 693 84 33 37<br/>tanoneedmond@gmail.com</p>
 					</div>
 					<header class="tanone_e_patale_header">
 						<div class="tanone_e_patale_header_logo">
