--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 				</div>
 				<div class="tanone_e_patale_contact_formilaire">
 					<p class="contact">Vous souhaitez me confier votre projet, ou tout simplement
-					me poser une quetion? N'esitez pas , remplssez le formulaire ci-dessous pour que nous puissons en discuter.
+					me poser une quetion? N'esitez pas , remplissez le formulaire ci-dessous pour que nous puissons en discuter.
 					</p>
 					<form action="traitement_formulaire.html" method="post">
 						<div class="formulaire_de_contact">
