--- a/apropos.html
+++ b/apropos.html
@@ -28,7 +28,7 @@
 									<img src="images/logo111.png"/>
 								</div>
 								<li><a href="index.html">ACCEUIL</a></li>
-								<li><a href="apropos.html" id="page_active">QUI_SUIS-JE ?</a></li>
+								<li><a href="apropos.html" id="page_active">QUI SUIS-JE ?</a></li>
 								<li><a href="blog.html">BLOG</a></li>
 								<li><a href="contact.html">CONTACT</a></li>
 								<div class="reseaux_sociaux" id="reseaux_sociaux">
