--- a/blog3.html
+++ b/blog3.html
@@ -27,7 +27,7 @@
 									<img src="images/logo111.png"/>
 								</div>
 								<li><a href="index.html">ACCEUIL</a></li>
-								<li><a href="apropos.html">QUI_SUIS-JE ?</a></li>
+								<li><a href="apropos.html">QUI SUIS-JE ?</a></li>
 								<li><a href="blog.html" id="page_active">BLOG</a></li>
 								<li><a href="contact.html">CONTACT</a></li>
 								<div class="reseaux_sociaux" id="reseaux_sociaux">
